--- a/ExerciseDaemon/ExerciseDaemon.Signup/Views/Home/Index.cshtml
+++ b/ExerciseDaemon/ExerciseDaemon.Signup/Views/Home/Index.cshtml
@@ -1,37 +1,49 @@
-﻿@{
+﻿@model ExerciseDaemon.Signup.Models.AthleteViewModel
+
+@{
     ViewData["Title"] = "Exercise Daemon";
 }
 
-<h1 class="page-header">Getting Started</h1>
-<p class="lead">Connect here to get motivated to exercise during lockdown.</p>
-
 @if (!User.Identity.IsAuthenticated)
 {
+    <p class="lead">Connect your Strava account to get motivated to exercise during lockdown!</p>
     <div class="row">
         <div class="col-lg-12">
             <div class="jumbotron">
-                <p>Add your own Strava App <em><strong>ClientId</strong></em> and <em><strong>ClientSecret</strong></em> to the <em>appsetting.json</em> file before connecting.</p>
-                <a class="strava-connect" asp-controller="Strava" asp-action="Connect">
-                    <img src="/images/btn_strava_connectwith_orange.png" />
-                </a>
+                <div style="margin: 0 auto; width: 600px; text-align: center;">
+                    <a class="strava-connect" asp-controller="Strava" asp-action="Connect">
+                        <img src="/images/btn_strava_connectwith_orange.png" />
+                    </a>
+                </div>
             </div>
         </div>
     </div>
 }
 else
 {
+    <p class="lead">You're connected! Woo!</p>
     <div class="row">
         <div class="col-lg-12">
             <div class="panel panel-default">
-                <div class="panel-heading">Authenticated</div>
+                <div class="panel-heading">Athlete</div>
                 <div class="panel-body">
-                    @foreach (var claim in User.Claims)
+                    <p><strong>@Model.Name</strong> &ndash; Joined Strava on : @Model.StravaJoinDate.ToString("D")</p>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <div class="row">
+        <div class="col-lg-12">
+            <div class="panel panel-default">
+                <div class="panel-heading">Latest Activities</div>
+                <div class="panel-body">
+                    @foreach (var activity in Model.Activities.OrderByDescending(a => a.StartDateLocal))
                     {
-                        <p><strong>@claim.Type</strong> &ndash; @claim.Value</p>
+                        <p><strong>@activity.Type</strong> &ndash; @activity.StartDateLocal.ToString("f")</p>
                     }
                 </div>
             </div>
-               
         </div>
     </div>
 }
