--- a/ExerciseDaemon/Views/Shared/_Layout.cshtml
+++ b/ExerciseDaemon/Views/Shared/_Layout.cshtml
@@ -13,7 +13,7 @@
         <link rel="stylesheet" href="https://ajax.aspnetcdn.com/ajax/bootstrap/3.3.7/css/bootstrap.min.css"
               asp-fallback-href="~/lib/bootstrap/dist/css/bootstrap.min.css"
               asp-fallback-test-class="sr-only" asp-fallback-test-property="position" asp-fallback-test-value="absolute" />
-        <link rel="stylesheet" href="~/css/site.min.css" asp-append-version="true" />
+        <link rel="stylesheet" href="~/css/site.css" asp-append-version="true" />
     </environment>
 </head>
 <body>
@@ -26,10 +26,10 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a asp-area="" asp-controller="Home" asp-action="Index" class="navbar-brand">Exercise Daemon</a>
+                <a asp-area="" asp-controller="Home" asp-action="Index" class="navbar-brand"></a>
             </div>
             <div class="navbar-collapse collapse">
-                <ul class="nav navbar-nav">
+                <ul class="nav navbar-nav" style="float: right;">
                     @if (User.Identity.IsAuthenticated)
                     {
                         <li><a asp-area="" asp-controller="Strava" asp-action="SignOut">Sign Out</a></li>
@@ -38,12 +38,9 @@
             </div>
         </div>
     </nav>
-    <div class="container body-content">
+    <div id="bg" class="container body-content">
+        <p class="headerLine">Exercise Daemon</p>
         @RenderBody()
-        <hr />
-        <footer>
-            
-        </footer>
     </div>
 
     <environment include="Development">
