--- a/ExerciseDaemon/wwwroot/css/site.css
+++ b/ExerciseDaemon/wwwroot/css/site.css
@@ -18,7 +18,7 @@ div#bg {
     max-height: 100%;
     margin: 0 auto;
     padding: 30px 0 0 0;
-    background-image: url('/images/background-fire.jpg');
+    background-image: url('https://d3p3wfpsct07a1.cloudfront.net/background-fire.jpg');
     background-size: 100% 100%;
     background-repeat: no-repeat;
 }
