--- a/ExerciseDaemon/wwwroot/css/site.css
+++ b/ExerciseDaemon/wwwroot/css/site.css
@@ -13,9 +13,10 @@ body {
 }
 
 div#bg {
-    width: 800px;
+    width: 90%;
     height: 100%;
     max-height: 100%;
+    max-width: 800px;
     margin: 0 auto;
     padding: 30px 0 0 0;
     background-image: url('https://d3p3wfpsct07a1.cloudfront.net/background-fire.jpg');
