--- a/ExerciseDaemon/Views/Home/Index.cshtml
+++ b/ExerciseDaemon/Views/Home/Index.cshtml
@@ -26,7 +26,7 @@
     else
     {
     <p class="lead">You're connected! Woo!</p>
-    <p>Now you just need to <b><a target="_blank" href="https://app.slack.com/client/T49PT3R50/G010P57B539/">click here</a></b> to join the Xero slack channel that will keep you motivated to stay fit during lockdown.</p>
+    <p>Now you just need to <b><a target="_blank" href="@Model.SlackChannelUrl">click here</a></b> to get to the Xero slack channel that will keep you motivated to stay fit during lockdown.</p>
     <div class="row">
         <div class="col-lg-12">
             <div class="panel panel-default">
